# claw-code

./: .clawd-todos.json  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  chess_game.html  dump_server.py  gen_crab_icon.py  run_local_openai.bat  start.bat  start.sh  startenv.bat
.claude-plugin/: install-counts-cache.json  installed_plugins.json
.claude/agents/: architect.md  build-error-resolver.md  code-architect.md  code-explorer.md  code-generation.md  code-reviewer.md  code-simplifier.md  comment-analyzer.md  cpp-build-resolver.md  cpp-reviewer.md  csharp-reviewer.md  dart-build-resolver.md  database-reviewer.md  doc-updater.md  e2e-runner.md  flutter-reviewer.md  go-build-resolver.md  go-reviewer.md  healthcare-reviewer.md  intent-validator.md  java-build-resolver.md  java-reviewer.md  kes.md  kotlin-build-resolver.md  kotlin-reviewer.md  logic-chain-auditor.md  performance-optimizer.md  pipeline-orchestrator.md  planner.md  pr-test-analyzer.md  python-reviewer.md  pytorch-build-resolver.md  refactor-cleaner.md  rust-build-resolver.md  rust-reviewer.md  security-reviewer.md  seo-specialist.md  silent-failure-hunter.md  tdd-guide.md  type-design-analyzer.md  (+1 more)
.claude/plugins/: install-counts-cache.json  known_marketplaces.json
.claude/skills/chrome-devtools-mcp/: SKILL.md
.claw/: env.example
.claw-agents/agents/: agent-18c1759687ce2cc4-0.json  agent-18c1759687ce2cc4-0.md  agent-18c17756ecb5793c-0.json  agent-18c17756ecb5793c-0.md
.claw/skills/browser-harness/: browser-harness-use.md
.claw/skills/chrome-devtools-mcp/: browsing-guide.md  debugging-guide.md
rust/: Cargo.toml  build.bat  build_rust_clang_msvc.bat  check_build.bat  mock_parity_scenarios.json
rust/crates/agents/: Cargo.toml
rust/crates/agents/src/: discovery.rs  lib.rs  normalize.rs  persist.rs  runtime.rs  spawn.rs  types.rs
rust/crates/agents/tests/: agent_id_uniqueness.rs  clock_jump_floor.rs  commit_sha_extraction.rs  manifest_atomicity.rs  subagent_kind_tools.rs  terminal_state_invariant.rs
rust/crates/agents/tests/common/: mod.rs
rust/crates/api/: Cargo.toml
rust/crates/api/benches/: request_building.rs
rust/crates/api/src/: client.rs  convert.rs  error.rs  incremental_body.rs  lib.rs  prompt_cache.rs  types.rs
rust/crates/api/tests/: client_integration.rs  openai_compat_integration.rs
rust/crates/commands/: Cargo.toml
rust/crates/commands/src/: handler.rs  lib.rs  path_extract.rs  plugin_agents.rs  registry.rs
rust/crates/mock-anthropic-service/: Cargo.toml
rust/crates/mock-anthropic-service/src/: lib.rs
rust/crates/plugin-types/: Cargo.toml
rust/crates/plugin-types/src/: config.rs  lib.rs  lifecycle.rs  mcp.rs
rust/crates/plugins/: Cargo.toml
rust/crates/plugins/bundled/browser-harness/: plugin.json
rust/crates/plugins/bundled/browser-harness/skills/: SKILL.md
rust/crates/plugins/src/: claude_settings.rs  frontmatter.rs  lib.rs
rust/crates/runtime/: Cargo.toml
rust/crates/runtime/src/: bash.rs  bash_dangerous_env.rs  bash_job_object_ffi.rs  boundary.rs  compact.rs  config.rs  config_validate.rs  context.rs  conversation.rs  file_ops.rs  hooks.rs  image_cache.rs  image_compressor.rs  image_store.rs  lib.rs  mcp_stdio.rs  mcp_tool_bridge.rs  oauth.rs  permission_enforcer.rs  permissions.rs  prompt.rs  sandbox.rs  session.rs  session_control.rs  task_registry.rs  team_cron_registry.rs  trust_resolver.rs  usage.rs  worker_boot.rs
rust/crates/runtime/src/thinking/: extract.rs  mod.rs  parser.rs  render.rs
rust/crates/runtime/src/tool_registry/: mod.rs  specs.rs
rust/crates/runtime/tests/: integration_tests.rs
rust/crates/rusty-claude-cli/: Cargo.toml  build.rs
rust/crates/rusty-claude-cli/examples/: mcp_fixture_server.rs
rust/crates/rusty-claude-cli/src/: init.rs  input.rs  main.rs  picker.rs  render.rs
rust/crates/rusty-claude-cli/tests/: cli_flags_and_config_defaults.rs  compact_output.rs  mock_parity_harness.rs
rust/crates/tools/: Cargo.toml
rust/crates/tools/src/: excel_extract.rs  lane_completion.rs  lib.rs  pdf_extract.rs  word_extract.rs
rust/docs/architecture/: server-context-analysis.md
(+3 files in other folders)
