[package]
name = "agents"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
test-utils = []

[dependencies]
api = { path = "../api" }
plugins = { path = "../plugins" }
runtime = { path = "../runtime" }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread"] }

[lints]
workspace = true
