[package]
name = "plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
claw-code-plugin-types = { path = "../plugin-types" }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true

[lints]
workspace = true
